--- a/frontend/event-participants-page.html
+++ b/frontend/event-participants-page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Events Registration App</title>
+    <title>Event Participants</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,17 +11,21 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/participants-style.css" />
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="/index.html">Home page</a>
+      </nav>
+    </header>
     <main>
       <section class="container">
-        <h1>Events</h1>
-        <ul class="events-list"></ul>
-        <ul class="pagination-list"></ul>
+        <h1>"Awesome Events" participants</h1>
+        <ul class="participants-list"></ul>
       </section>
     </main>
 
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/participants.js"></script>
   </body>
 </html>
