--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <main>
-      <section class="container">
+      <div id="loading-message">Please be patient! The content is being loaded and may take a few minutes. Thank you for your understanding!</div>
+      <section id="content" class="container" style="display: none;">
         <h1>Events</h1>
         <ul class="events-list"></ul>
         <ul class="pagination-list"></ul>
